--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence" height="40" width="217" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -54,7 +54,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Logo de l'agence la Panthère"/>
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de l'agence la Panthère"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -217,6 +217,9 @@
 	</div>
 </div>
 <!-- bloc-5-cta END -->
+	<!-- ScrollToTop Button -->
+	<a class=" btn btn-d scrollToTop" role="button" aria-label="back to top" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+	<!-- ScrollToTop Button END-->
 
 <!-- Footer - bloc-8 -->
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
