--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     <title>Contact La panthère entreprise web design Lyon</title>
@@ -126,22 +126,26 @@
 				<div class="flex social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Twitter" href="http://www.twitter.fr/"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" aria-label="Twitter" href="http://www.twitter.fr/">
+								<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com">
+								<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Dribbble" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" aria-label="Dribbble" href="https://dribbble.com">
+								<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="instagram" href="https://www.instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" aria-label="instagram" href="https://www.instagram.com">
+								<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -153,14 +157,11 @@
 
 </div>
 <!-- Principal conteneur END -->
+
 <script src="./js/jquery-2.1.0.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/blocs.min.js"></script>
 <script src="./js/jqBootstrapValidation.js"></script>
 <script src="./js/formHandler.js"></script>
-
-
-    
-
 </body>
 </html>
