--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="DQtLNmzSvZ9XfxJs3f03p_hb0Z2cIezghDgL-0QoanA" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
