--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="DQtLNmzSvZ9XfxJs3f03p_hb0Z2cIezghDgL-0QoanA" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel= "canonical" href= "https://boninnchan.github.io/Lagence-la-panthere.P4/" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
